# fast-zero

./: .coverage  .env  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  users.py
fast_zero/routers/views/: login_view.py  users_view.py
migrations/: env.py
migrations/versions/: 8909775cd8fc_create_users_table.py
tests/: conftest.py  test_db.py  test_users.py
